--- a/frontend/src/components/screens/login/login.css
+++ b/frontend/src/components/screens/login/login.css
@@ -1,13 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@500&display=swap');
 
 form {
-    background-color: aliceblue;
+    background-color: ghostwhite;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
 }
 
 .formContainer {
     position: relative;
     min-height: 100vh;
+}
+
+.loginContainer {
+    width: 25rem;
 }
 
 .myForm {
