Revert "login/register"
This reverts commit 3f9895155ad3e1c2b3ed247f117e95cb296d2be2, reversing
changes made to bc65f92727edf6f4d34c6a72ffb6a2896d87c2e0.

--- a/frontend/src/components/screens/login/login.css
+++ b/frontend/src/components/screens/login/login.css
@@ -1,32 +1,29 @@
-@import url("https://fonts.googleapis.com/css2?family=Public+Sans:wght@500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@500&display=swap');
 
 form {
-  background-color: ghostwhite;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+    background-color: ghostwhite;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
 }
 
 .formContainer {
-  position: relative;
-  min-height: 100vh;
+    position: relative;
+    min-height: 100vh;
 }
 
 .loginContainer {
-  width: 25rem;
+    width: 25rem;
 }
 
 .myForm {
-  position: absolute;
-  height: 100%;
-  width: 100%;
+    position: absolute;
+    height: 100%;
+    width: 100%;
 }
 
 .heading {
-  font-family: "Public Sans", sans-serif;
-  font-size: 200%;
-  color: black;
-  justify-content: center;
-  text-align: center;
-}
-.loginContainer {
-  width: 25rem;
+    font-family: 'Public Sans', sans-serif;
+    font-size: 200%;
+    color: black;
+    justify-content: center;
+    text-align: center;
 }
