--- a/frontend/src/components/ViewLists/ListsPage.css
+++ b/frontend/src/components/ViewLists/ListsPage.css
@@ -68,3 +68,31 @@
   margin-left: 10px;
   font-size: 17px;
 }
+.myListRightSectionItemWrapper {
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+}
+.myListDeleteIcon {
+  color: red;
+}
+.myListDeleteIcon:hover {
+  cursor: pointer;
+  color: rgb(255, 90, 90);
+}
+.myListRightSectionProblemTitle {
+  color: rgb(0, 162, 255);
+  font-size: 19px;
+}
+.myListProblemItemChecker {
+  color: rgba(88, 245, 16, 0.719);
+}
+.myListLeftSectionBottom > Form {
+  background-color: black;
+  padding: 1rem;
+  border: 1px solid grey;
+}
+.newListNameField {
+  background-color: rgb(36, 36, 36);
+  color: white;
+}
