--- a/frontend/src/components/ListElement/listele.css
+++ b/frontend/src/components/ListElement/listele.css
@@ -1,5 +1,5 @@
 .title {
-    font-size: xx-large;
+    font-size: large;
 }
 
 .accordion-button {
@@ -21,6 +21,7 @@
 
 .accordion-body {
     background-color: #2d2d2d;
+    height: fit-content;
 }
 
 .link {
@@ -31,4 +32,8 @@
 
 .cls {
     margin-top: 0.8rem;
+}
+
+.accordion {
+    margin: 0.7%;
 }
