--- a/frontend/src/screens/Register/Register.css
+++ b/frontend/src/screens/Register/Register.css
@@ -20,7 +20,7 @@ form {
     width: 100%;
 }
 
-.heading {
+.loginHead {
     font-family: 'Public Sans', sans-serif;
     font-size: 200%;
     color: black;
