--- a/frontend/src/components/ListElement/grid.css
+++ b/frontend/src/components/ListElement/grid.css
@@ -1,23 +1,6 @@
-th {
-    border: none;
-}
-
-tr {
-    border: none;
-}
-
-td {
-    border: none;
-}
-
-thead {
-    border: none;
-}
-
-tbody {
-    border: none;
-}
-
-table {
-    border: none;
+.heading {
+    font-size: 1.4rem;
+    font-variant: small-caps;
+    color: ghostwhite;
+    text-align: left;
 }
