--- a/frontend/src/components/ViewLists/ListsPage.css
+++ b/frontend/src/components/ViewLists/ListsPage.css
@@ -106,7 +106,7 @@
   color: rgba(88, 245, 16, 0.719);
 }
 
-.myListLeftSectionBottom>Form {
+.myListLeftSectionBottom > Form {
   background-color: black;
   padding: 1rem;
   border: 1px solid grey;
@@ -115,4 +115,18 @@
 .newListNameField {
   background-color: rgb(36, 36, 36);
   color: white;
+}
+
+.myListLeftSectionItems {
+  border: 1px solid grey;
+  padding: 10px;
+}
+.myListLeftSectionItems:hover {
+  background-color: rgb(145, 197, 218);
+  cursor: pointer;
+}
+.myListLeftSectionItemsColored {
+  border: 1px solid grey;
+  padding: 10px;
+  background-color: rgb(0, 183, 255);
 }
